--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <!-- Cordova polic  -->
-  <meta http-equiv="Content-Security-Policy" content="default-src https://code.jquery.com https://fonts.gstatic.com 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' data: https://api.spaceflightnewsapi.net; style-src https://fonts.googleapis.com 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">  <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="Content-Security-Policy" content="default-src https://code.jquery.com https://fonts.gstatic.com 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' data: https://api.spaceflightnewsapi.net; style-src https://fonts.googleapis.com 'self' 'unsafe-inline'; media-src *; img-src 'self' * data: content:;">  <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
   <title>Parallax Template - Materialize</title>
@@ -39,13 +39,12 @@
     <br>
     <a id="update" class="waves-effect waves-light btn"><i class="material-icons right">sync</i>Actualizar</a>
     <div id="llistaPrincipal" class="collection">
-      <a href="#!" class="collection-item">Alvin</a>
-      <a href="#!" class="collection-item active">Alvin</a>
-      <a href="#!" class="collection-item">Alvin</a>
-      <a href="#!" class="collection-item">Alvin</a>
     </div>
   </div>
-  <div id="test-swipe-2" class="col s12 red">Test 2</div>
+  <!-- Tab 2  -->
+  <div id="test-swipe-2" class="col s12 white">
+
+  </div>
   <div id="test-swipe-3" class="col s12 green">Test 3</div>
 
 
